yamls/authserver-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: authserver-service
  labels:
    name: authserver-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: authserver-app
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authserver-app
spec:
  selector:
    matchLabels:
      app: authserver-app
  replicas: 1
  template:
    metadata:
      labels:
        app: authserver-app
    spec:
      containers:
        - name: authserver-app
          image: authserver-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config  # name of configMap
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: name
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: db-user # Secret Name
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: db-user
                  key: password
