yamls/bloodbankserver-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: bloodbank-server-service
  labels:
    name: bloodbank-server-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: bloodbank-server-app
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloodbank-server-app
spec:
  selector:
    matchLabels:
      app: bloodbank-server-app
  replicas: 1
  template:
    metadata:
      labels:
        app: bloodbank-server-app
    spec:
      containers:
        - name: bloodbank-server-app
          image: bloodbank-server-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config  # name of configMap
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: name
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: db-user # Secret Name
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: db-user
                  key: password
