yamls/user-view-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: user-view-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: user-view-app
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-view-app
spec:
  selector:
    matchLabels:
      app: user-view-app
  replicas: 1
  template:
    metadata:
      labels:
        app: user-view-app
    spec:
      containers:
        - name: user-view-app
          image: bloodbank/user-view-app:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
