yamls/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /web/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-view-service
                port:
                  number: 3000
          - path: /web/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-view-service
                port:
                  number: 3000
          - path: /authenticate/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authserver-service
                port:
                  number: 8080
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: user-view-service
          #       port:
          #         number: 3000
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: bloodbank-server-service
          #       port:
          #         number: 8080
